updated to todo list

--- a/todo.txt
+++ b/todo.txt
@@ -1,67 +1,61 @@
-[\] minimum requirements
-    [X] when getting a pair wrong, replace the group for a group with one extra pair
-    [X] adding groups from time to time
-    [\] testing for game end conditions
-        [X] board full
-        [X] timeout
-        [X] number of clears
-        [ ] running out of scheduled cards
-    [\] visual feedback
-        [X] to show selected bricks
-        [ ] when u get a pair right
-        [ ] when u get a pair wrong
-    [\] DB
-        [X] creating the database module
-        [X] storing the cards in the db
-        [ ] including all fields necessary to the scheduling
-            /*
-              mistakes
-                  id
-                  iRemainingReps
-              cards_mistakes
-                  idMistake
-                  idCard
-              cards
-                  id
-                  sFront
-                  sBack
-                  dLastRep
-                  dNextRep
-                  fEasiness
-                  
-                  grade
-                  acq_reps
-                  ret_reps
-                  lapses
-                  acq_reps_since_lapse
-                  ret_reps_since_lapse
-                  unseen
-                  scheduled_interval
-                  actual_interval
-                  new_interval
-                  noise
-                  thinking_time
-            */
-    [ ] some basic scheduling
-[\] full version
-    [X] ignore attempts of matching 2 bricks from the same column
-    [ ] make "dragging" work on touchscreens
-    [ ] multiple game modes
-        // classic: play until the screen gets filled
-        // review: play only until you're done with the flashcards scheduled for today or before
-        // 5 min: try to make as many points as possible in 5 minutes
-        // 10 clear: clear the screen 10 times in the least amount of time possible
-    [ ] improve scheduling
-    [ ] keep scores and store records and statistics
-    [ ] config screen
-    [ ] allowing the user to import decks
-    [ ] gay it up
-        [ ] use a canvas element
-        [ ] background images
-            /*
-              Terragen?
-                http://www.planetside.co.uk/content/view/21/36/
-              
-              look for royalty free image banks
-            */
-    [ ] make it an app (not sure of what that means)
+[X] measure time it takes for scheduleMatch, scheduleMismatch and createNewGroup
+[X] prevent collisions such as (det, it) + (som, that) when there is a card (det, that)
+[ ] remove unused tables
+[ ] increase game speed every time the player clears the screen
+[ ] provide feedback in case of mismatch
+[ ] limit new cards and mistakes to one per group
+[ ] (epic) keep scores
+[ ] update cards on DB according to a file
+[ ] refactor Pair class
+[ ] create a build script
+[\] keeping all words in an array to avoid querying the DB all the time?
+[ ] creating a new group before it is needed
+[ ] optimize distance calculation by using a max distance parameter
+[ ] update easiness
+[ ] request confirmation to clear DB
+[ ] make "dragging" work on touchscreens
+[\] multiple game modes?
+    [X] groups: play until the screen gets filled and words are grouped like multiple choice questions
+    [ ] classic: play until the screen gets filled, words are not grouped in any way and their pairs may not even be in the screen
+    [ ] review: play only until you're done with the flashcards scheduled for today or before
+    [ ] 5 min: try to make as many points as possible in 5 minutes
+    [ ] 10 clear: clear the screen 10 times in the least amount of time possible
+[ ] store records and statistics
+[ ] (epic) make the UI nice, with animations and stuff
+[ ] different background images for different screens
+    /*
+      Terragen?
+        http://www.planetside.co.uk/content/view/21/36/
+
+      look for royalty free image banks
+    */
+[ ] make it an app (not sure of what that means)
+[ ] (epic) allowing the user to import decks
+
+
+
+
+//////////////
+// DB stuff //
+//////////////
+
+cards
+  id
+  sFront
+  sBack
+  dLastRep
+  dNextRep
+  fEasiness
+
+  grade
+  acq_reps
+  ret_reps
+  lapses
+  acq_reps_since_lapse
+  ret_reps_since_lapse
+  unseen
+  scheduled_interval
+  actual_interval
+  new_interval
+  noise
+  thinking_time
