--- a/todo.txt
+++ b/todo.txt
@@ -10,7 +10,7 @@
 [X] create state column
 [X] implement workflow
 [X] limit new cards and lapses to one per group
-[ ] board.addDefaultGroup - Use a flag to prevent adding 2 groups in a row
+[X] board.addDefaultGroup - Use a flag to prevent adding 2 groups in a row
 [ ] adapt speed - maybe something like this: When numRows change => period *= 1 + (numRows - 5) * 0.02
 [ ] show simple statistics about states
 [ ] possibility to pause the game
