updating the speed every time a group is added or a pair is matched

--- a/todo.txt
+++ b/todo.txt
@@ -11,8 +11,9 @@
 [X] implement workflow
 [X] limit new cards and lapses to one per group
 [X] board.addDefaultGroup - Use a flag to prevent adding 2 groups in a row
-[ ] adapt speed - maybe something like this: When numRows change => period *= 1 + (numRows - 5) * 0.02
+[X] adapt speed - maybe something like this: When numRows change => period *= 1 + (numRows - 5) * 0.02
 [ ] show simple statistics about states
+[ ] add a bar showing the remaining time for the next group
 [ ] possibility to pause the game
 [ ] provide feedback in case of mismatch
 [ ] (epic) keep scores
